# isae-projects

./: CMakeLists.txt
config/: _template_POV.pov  _template_glassbeads.txt  config_impact.txt  config_penetrometer.txt  config_platform_repose_10.00_r_1.50_std_0.200.txt  config_platform_repose_100.00_r_1.50_std_0.200.txt  config_platform_repose_120.00_r_1.50_std_0.200.txt  config_platform_repose_130.00_r_1.50_std_0.200.txt  config_platform_repose_30.00_r_1.50_std_0.200.txt  config_platform_repose_50.00_r_1.50_std_0.200.txt  config_repose.txt  config_repose.txt.orig  config_setbox.txt  config_setbox_baseline.txt  config_setbox_force_1.txt  config_setbox_force_2.txt  config_setbox_force_3.txt  config_setbox_force_4.txt  config_setbox_force_5.txt  config_setbox_force_6.txt  config_setbox_force_7.txt  config_setbox_force_8.txt  config_setbox_force_s_1.txt  config_setbox_force_s_2.txt  config_setbox_force_s_3.txt  config_setbox_force_s_4.txt  config_setbox_force_s_5.txt  config_setbox_force_s_6.txt  config_setbox_force_s_7.txt  config_setbox_force_s_8.txt  config_setbox_mix.txt  config_setbox_mix_3_0_s.txt  config_setbox_mix_3_1.txt  config_setbox_mix_3_10.txt  config_setbox_mix_3_10_s.txt  config_setbox_mix_3_11.txt  config_setbox_mix_3_11_s.txt  config_setbox_mix_3_12.txt  config_setbox_mix_3_12_s.txt  config_setbox_mix_3_13.txt  (+122 more)
matlab/: process_simulation.m
matlab/_util/: import_energy.m  import_packing.m  import_params.m  import_state_bin.m  import_stats.m  plot_energy.m  plot_grain_distribution.m  plot_stats.m
postprocess/: CMakeLists.txt  proc_binaries.cpp  proc_packing.cpp  proc_standard.cpp
shared/: CMakeLists.txt  ProjCalcs.cpp  ProjCalcs.h  ProjConfig.cpp  ProjConfig.h  ProjProc.cpp  ProjProc.h  ProjWheels.cpp  ProjWheels.h  ProjWriteData.cpp  ProjWriteData.h
sims/: CMakeLists.txt  benchmark.cpp  benchmark.cpp.orig  demo_paths.cpp  impact.cpp  penetrometer.cpp  repose_set.cpp  repose_set.cpp.orig  setbox.cpp  setbox_mix.cpp  setbox_pressure.cpp  setcyl.cpp
